Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37977

Crashes in QQuickTransitionManager::cancel()

XMLWordPrintable

    • e9520ec84c95e10a6826b2289e46552a2d446895

      Backtraces

      /usr/lib/libQt5Quick.so.5() [0x42f348f8] QQuickTransitionManager::cancel
      /usr/lib/libQt5Quick.so.5() [0x4307b1e8] QQuickItemViewTransitionableItem::stopTransition
      /usr/lib/libQt5Quick.so.5() [0x4307c3ac] QQuickItemViewTransitionableItem::prepareTransition
      /usr/lib/libQt5Quick.so.5() [0x430750a4] QQuickItemViewPrivate::prepareNonVisibleItemTransition
      /usr/lib/libQt5Quick.so.5() [0x43077e5c] QQuickItemViewPrivate::layout
      /usr/lib/libQt5Quick.so.5() [0x430795cc] QQuickItemView::setCurrentIndex
      /usr/lib/libQt5Quick.so.5() [0x430dd138] QQuickItemView::qt_metacall
      /usr/lib/libQt5Quick.so.5() [0x430c92c8] QQuickListView::qt_metacall
      /usr/lib/libQt5Qml.so.5(_ZN17QQmlVMEMetaObject8metaCallEN11QMetaObject4CallEiPPv+0x37c) [0x4319e3a0]
      /usr/lib/libQt5Qml.so.5() [0x43183da0]
      /usr/lib/libQt5Core.so.5(_ZN11QMetaObject8metacallEP7QObjectNS_4CallEiPPv+0x44) [0x42371978]
      /usr/lib/libQt5Qml.so.5() [0x432b8690]
      /usr/lib/libQt5Qml.so.5(_ZN17QV8QObjectWrapper11SetPropertyEP9QV8EngineP7QObjectRK15QHashedV8StringP15QQmlContextDataN2v86HandleINS9_5ValueEEENS_12RevisionModeE+0x1f8) [0x432b8dbc]
      /usr/lib/libQt5Qml.so.5(_ZN17QV8ContextWrapper6SetterEN2v85LocalINS0_6StringEEENS1_INS0_5ValueEEERKNS0_12AccessorInfoE+0x36c) [0x432b34c8]
      /usr/lib/libQt5V8.so.5() [0x42ce35d4]
      /usr/lib/libQt5V8.so.5() [0x42d6d11c

        For Gerrit Dashboard: QTBUG-37977
        # Subject Branch Project Status CR V

            yulong.bai Bai Yulong
            elvis Elvis Lee
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There is 1 open Gerrit change