Fix crash to prevent item from being released in layout

Items which stopped transition on preparing transition eventually
will be released in layout. So we don't need to allow releasing it.
Otherwise crash occurs while QQuickItemViewTransitionableItem and
QQuickTransitionManager destroy themselves on releasing the item.

Task-number: QTBUG-37977
Change-Id: I22468c06db53647d4bc284006a07140f9f914af9